Fixed Electrona Machines tab icon

--- a/datalists/tabs.yaml
+++ b/datalists/tabs.yaml
@@ -1,5 +1,5 @@
 - ELECTRONA_MACHINES:
-  texture: SOLAR_PANEL_T_1
+  texture: SOLAR_PANEL
 - ELECTRONA_BLOCKS:
   texture: TIN_ORE
 - ELECTRONA_ITEMS:
