--- a/forge-1.16.5/mappings/entities.yaml
+++ b/forge-1.16.5/mappings/entities.yaml
@@ -4,9 +4,9 @@ _default:
   - zombie
 EnergeticLightningBolt:
   - net.reikeb.electrona.entity.EnergeticLightningBolt
-  - net.reikeb.electrona.EntityInit.ENERGETIC_LIGHTNING_BOLT.get()
+  - net.reikeb.electrona.init.EntityInit.ENERGETIC_LIGHTNING_BOLT.get()
   - energetic_lightning_bolt
 RadioactiveZombie:
   - net.reikeb.electrona.entity.RadioactiveZombie
-  - net.reikeb.electrona.EntityInit.RADIOACTIVE_ZOMBIE.get()
+  - net.reikeb.electrona.init.EntityInit.RADIOACTIVE_ZOMBIE.get()
   - radioactive_zombie
