--- a/forge-1.17.1/mappings/gamerules.yaml
+++ b/forge-1.17.1/mappings/gamerules.yaml
@@ -1,3 +1,3 @@
 _default: null
-DO_BLACK_HOLES_EXIST: net.reikeb.electrona.world.Gamerules.DO_BLACK_HOLES_EXIST
-DO_NUCLEAR_BOMBS_EXPLODE: net.reikeb.electrona.world.Gamerules.DO_NUCLEAR_BOMBS_EXPLODE
+DO_BLACK_HOLES_EXIST: Gamerules.DO_BLACK_HOLES_EXIST
+DO_NUCLEAR_BOMBS_EXPLODE: Gamerules.DO_NUCLEAR_BOMBS_EXPLODE
