--- a/forge-1.17.1/mappings/particles.yaml
+++ b/forge-1.17.1/mappings/particles.yaml
@@ -1,4 +1,4 @@
 _default: ParticleTypes.CRIT
-DARK_MATTER: net.reikeb.electrona.init.ParticleInit.DARK_MATTER.get()
-GRAVITORIUM: net.reikeb.electrona.init.ParticleInit.GRAVITORIUM.get()
-RADIOACTIVE_FALLOUT: net.reikeb.electrona.init.ParticleInit.RADIOACTIVE_FALLOUT.get()
+DARK_MATTER: ParticleInit.DARK_MATTER.get()
+GRAVITORIUM: ParticleInit.GRAVITORIUM.get()
+RADIOACTIVE_FALLOUT: ParticleInit.RADIOACTIVE_FALLOUT.get()
